# optiary

./: Cargo.toml  README.md  codecov.yaml
.github/workflows/: coverage.yml
src/: main.rs  types.rs
src/entity/: date.rs  done_status.rs  mod.rs  task.rs  time.rs  time_range.rs  todo.rs
src/repository/: id.rs  mod.rs
src/repository/memory/: mod.rs  task.rs  todo.rs
