[package]
name = "opatiary-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
rstest = "0.12.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
speculate = "0.1.2"
tokio = { version = "1.17.0", features = ["full"] }
warp = "0.3.2"
